testsuite/poke.pkl/defun-diag-1.pk
/* { dg-do compile } */

fun foo = (any a) int:
  {
   return a; /* { dg-error ".*\n.*" } */
  }
